# sandbox

./: .gitignore  README.md
Doc/: list_of_projects_CNC_robotics.odt
GAZEBO/gazebo_ws/src/gazebo_tutorial/: README.md
cpp_course/: README.md
cpp_course/robot_cpp/: CMakeLists.txt
cpp_course/robot_cpp/include/: motor.hpp  sensor.hpp
cpp_course/robot_cpp/src/: main.cpp  motor.cpp
gazebo_ws/src/gazebo_tutorial/: README.md  buidling_robot.sdf
python_course/: README.md
python_course/python_math/: robot_lab.py
python_course/robot_controller/: config.py  config_example.json  main.py
python_course/robot_controller/controller/: robot_controller.py
python_course/robot_controller/hardware/: hal.py  serial_comm.py
python_course/robot_controller/monitor/: robot_monitor.py
